# json-app

./: .gitignore  JSON1.txt  Makefile  README.md  configure.ac  hotspot.json  json-app.c  wireless.json
documentation/: jsonapp.tex
src/: Makefile.am  chilli_engine.c  hotspot_engine.c  json-app.c  json-app.h  wireless_engine.c  wlan_engine.c
test/: dhcp.json  hotspot.json  network.json  wireless.json
